// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`python full integration test synth synth generates JSON for both stacks 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"stackName\\": \\"python-simple-one\\",
<<<<<<< HEAD
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\"~> 3.1.0\\",
        \\"source\\": \\"hashicorp/null\\"
      }
<<<<<<< HEAD
=======
    },
    \\"backend\\": {
      \\"local\\": {}
=======
      \\"version\\": \\"stubbed\\"
>>>>>>> 967a8694 (feat(lib): produce stable `cdk.tf.json` output)
>>>>>>> d7803082 (feat(lib): produce stable `cdk.tf.json` output)
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"nullresource\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"python-simple-one/null-resource\\",
            \\"uniqueId\\": \\"nullresource\\"
          }
        }
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"hashicorp/null\\",
        \\"version\\": \\"~> 3.1.0\\"
      }
    }
  }
}"
`;

exports[`python full integration test synth synth generates JSON for both stacks 2`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"stackName\\": \\"python-simple-two\\",
<<<<<<< HEAD
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\"~> 3.1.0\\",
        \\"source\\": \\"hashicorp/null\\"
      }
<<<<<<< HEAD
=======
    },
    \\"backend\\": {
      \\"local\\": {}
=======
      \\"version\\": \\"stubbed\\"
>>>>>>> 967a8694 (feat(lib): produce stable `cdk.tf.json` output)
>>>>>>> d7803082 (feat(lib): produce stable `cdk.tf.json` output)
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"nullresource\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"python-simple-two/null-resource\\",
            \\"uniqueId\\": \\"nullresource\\"
          }
        }
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"hashicorp/null\\",
        \\"version\\": \\"~> 3.1.0\\"
      }
    }
  }
}"
`;
